Changes:
  Jul 19, 2018:
    1. porting link list, rb-tree, radix-tree, bitmap APIs from linux kernel v4.14.43

  Jul 23, 2018:
    1. porting lockless-link-list from linux kernel v4.14.43

    2. porting rcu-list & hashtable, also add simple test cases.
